--- a/python/web/pickplaz.css
+++ b/python/web/pickplaz.css
@@ -14,6 +14,12 @@ body {
     display: flex;
     flex-flow: column;
 }
+a:link, a:visited {
+    color: white;
+}
+a:hover {
+    color: rgb(255, 196, 196);
+}
 
 .menu {
     margin: 10px;
@@ -135,11 +141,21 @@ body {
 .logo {
     float: left;
     margin: 10px;
+    margin-top: 7px;
     padding: 2px;
-    font-size: 16pt;
+    font-size: 18pt;
     color: white;
     font-weight: 900;
 }
+.logo::before {
+    position: absolute;
+    content: "by ftobler & ntobler";
+    text-decoration: none;
+    font-size: 8pt;
+    margin-top: 30px;
+    margin-left: 1px;
+}
+
 
 
 
