--- a/python/web/pickplaz.css
+++ b/python/web/pickplaz.css
@@ -14,6 +14,7 @@ body {
     display: flex;
     flex-flow: column;
     overflow-y: scroll; /* Show vertical scrollbar */
+    font-size: 12pt;
 }
 body::-webkit-scrollbar {
     width: 8px;
@@ -48,6 +49,28 @@ a:hover {
     font-weight: bold;
     transform: skew(-15deg);
     cursor: pointer;
+    position: sticky;
+    z-index: 5;
+}
+.menu-menu-item {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-align: left;
+    padding-left: 10px;
+    vertical-align: middle;
+    float: left;
+    background-color: rgb(50,50,50);
+    width: 120px;
+    line-height: 32px;
+    height: 32px;
+    font-weight: normal;
+    cursor: pointer;
+    font-size: 11pt;
+}
+.menu-menu-item:hover {
+    background-color: rgb(70,70,70);
+}
+.menu-menu-item:active {
+    background-color: rgb(0, 150, 92);
 }
 
 .menu-item:hover {
@@ -55,6 +78,9 @@ a:hover {
 }
 
 .menu-item.active {
+    background-color: rgb(0, 150, 92);
+}
+.menu-item.active:hover {
     background-color: rgb(0, 150, 92);
 }
 
