--- a/python/web/pickplaz.css
+++ b/python/web/pickplaz.css
@@ -403,7 +403,7 @@ input:checked + .slider:before {
     margin-bottom: 70px;
 }
 
-.alert-inner input {
+.alert-inner input,.alert-inner select {
     height: 30px;
     color: white;
     background-color: rgb(13, 14, 19);
@@ -454,4 +454,39 @@ input:checked + .slider:before {
 }
 
 
+.debug-page {
+    text-align: left;
+    margin-left: -10px;
+    margin-right: -5px;
+}
+
+.debug-page h1 {
+    margin-top: 0;
+    margin-left: 5px;
+    margin-bottom: 10px;
+}
+
+.debug-section {
+    float: left;
+    margin: 5px;
+    padding: 10px;
+    width: 430px;
+    height: 430px;
+    background-color: rgb(13, 14, 19);
+    overflow: hidden;
+}
+
+.debug-section p{
+    margin-top: 0;
+    margin-bottom: 7px;
+}
+.debug-section a{
+    display: block;
+    text-align: center;
+    width: 430px;
+}
+.debug-section img{
+    max-width: 410px;
+    max-height: 400px;
+}
 
