--- a/python/web/pickplaz.css
+++ b/python/web/pickplaz.css
@@ -43,9 +43,15 @@ button {
     text-align: center;
     text-decoration: none;
     display: inline-block;
+
+    transition: 0.3s;
 }
 button:hover {
     background-color: rgb(0, 102, 63);
+}
+button:active {
+    background-color: rgb(0, 235, 145);
+    transition: 0s;
 }
 
 
@@ -71,6 +77,7 @@ button:hover {
     cursor: pointer;
     position: sticky;
     z-index: 5;
+    transition: 0.3s;
 }
 .menu-menu-item {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -91,6 +98,7 @@ button:hover {
 }
 .menu-menu-item:active {
     background-color: rgb(0, 150, 92);
+    transition: 0s;
 }
 
 .menu-item:hover {
@@ -102,6 +110,7 @@ button:hover {
 }
 .menu-item.active:hover {
     background-color: rgb(0, 150, 92);
+    transition: 0s;
 }
 
 .menu-pane {
@@ -137,10 +146,14 @@ button:hover {
     font-family: "Material Icons";
     font-size: 24px;
     cursor: pointer;
+    transition: 0.3s;
 }
-
 .menu-upload:hover {
     background-color: rgb(70,70,70);
+}
+.menu-upload:active {
+    background-color: rgb(124, 124, 124);
+    transition: 0s;
 }
 
 .stop {
@@ -164,12 +177,14 @@ button:hover {
     font-family: "Material Icons";
     font-size: 24px;
     cursor: pointer;
+    transition: 0.3s;
 }
 .menu-material:hover {
     background-color: rgb(70,70,70);
 }
 .menu-material:active {
     background-color: rgb(0, 150, 92);
+    transition: 0s;
 }
 
 
@@ -231,9 +246,11 @@ table {
 tr {
     height: 30px;
     border-bottom: 1px solid rgb(100,100,100);
+    transition: 0.3s;
 }
 tr:hover {
-    background-color: rgba(255,255,255,0.1);
+    background-color: rgba(255,255,255,0.05);
+    transition: 0.0s;
 }
 th {
     border-bottom: 3px solid rgb(100,100,100);
@@ -249,6 +266,7 @@ td {
 .table-button {
     display:  inline-block;
     vertical-align: sub;
+    transition: 0.3s;
 }
 .table-button:hover {
     background-color: rgba(255,255,255,0.15);
@@ -256,6 +274,7 @@ td {
 }
 .table-button:active {
     background-color: rgb(0, 150, 92);
+    transition: 0s;
 }
 .table-button.material {
     font-family: "Material Icons";
@@ -275,10 +294,20 @@ td {
 .tab {
     margin-left: 20px;
 }
-th.small{
+th.small {
     font-size: 10pt;
     text-align: left;
     transform: translate(5px, -10px) rotateZ(-30deg);
+}
+tr.inactive {
+    background: repeating-linear-gradient(
+        -60deg,
+        #00000000,
+        #00000000 10px,
+        #5e5e5e 10px,
+        #5e5e5e 11px
+      );
+    opacity: 0.5;
 }
 
 
@@ -382,12 +411,14 @@ input:checked + .slider:before {
     display: block; /* Hidden by default */
     position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
+    padding: 500px;
+    padding-top: 600px; /* Location of the box */
+    margin: -500px;
     left: 0;
     top: 0;
     width: 100%; /* Full width */
     height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
+    overflow: hidden; /* Enable scroll if needed */
     background-color: none;
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
@@ -403,6 +434,7 @@ input:checked + .slider:before {
     transform: skew(-15deg);
     overflow: hidden;
     position: relative;
+    transition: transition-alert;
 }
 .alert-content h1 {  /* nested selector (space)*/
     margin: 10px;
@@ -417,7 +449,7 @@ input:checked + .slider:before {
     margin-bottom: 90px;
 }
 
-.alert-inner input,.alert-inner select {
+.alert-inner input,.alert-inner select,.alert-inner option {
     height: 30px;
     color: white;
     background-color: rgb(13, 14, 19);
@@ -432,6 +464,7 @@ input:checked + .slider:before {
 .alert-inner select::-webkit-scrollbar-thumb {
     background-color: rgb(116, 116, 116);
 }
+
 .alert-button-list {
     position: absolute;
     bottom: 10px;
@@ -449,9 +482,14 @@ input:checked + .slider:before {
     text-align: center;
     vertical-align: middle;
     background-color: rgb(34, 37, 46);
+    transition: 0.3s;
 }
 .alert-button:hover {
     background-color: rgb(58, 61, 73);
+}
+.alert-button:active {
+    background-color: rgb(96, 99, 112);
+    transition: 0s;
 }
 
 
@@ -523,3 +561,59 @@ input:checked + .slider:before {
     font-weight: bold;
 }
 
+
+
+.page {
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+
+.transition-page-enter-active {
+    transition: .3s ease-in-out;
+}
+.transition-page-leave-active {
+    transition: .3s ease-in-out;
+}
+.transition-page-enter{
+    transform: translateX(300px);
+    opacity: 0;
+}
+.transition-page-leave-to {
+    transform: translateX(-300px);
+    opacity: 0;
+}
+
+
+
+.transition-alert-enter-active {
+    transition: .3s ease-in-out;
+}
+.transition-alert-leave-active {
+    transition: .3s ease-in-out;
+}
+.transition-alert-enter{
+    transform: translateY(-150px);
+    opacity: 0;
+}
+.transition-alert-leave-to {
+    transform: translateY(-150px);
+    opacity: 0;
+}
+
+
+
+.transition-hamburger-enter-active {
+    transition: .2s ease-in-out;
+}
+.transition-hamburger-leave-active {
+    transition: .2s ease-in-out;
+}
+.transition-hamburger-enter{
+    transform: translateY(-50px);
+    opacity: 0;
+}
+.transition-hamburger-leave-to {
+    transform: translateY(-50px);
+    opacity: 0;
+}
