--- a/python/web/pickplaz.css
+++ b/python/web/pickplaz.css
@@ -3,7 +3,6 @@ html {
     height: 100%;
 }
 body {
-    /*background-color: rgb(20,20,20);*/
     background-color: rgb(21, 23, 31);
     padding: 0px;
     margin: 0px;
@@ -14,7 +13,9 @@ body {
     display: flex;
     flex-flow: column;
     overflow-y: scroll; /* Show vertical scrollbar */
+    overflow-x: hidden;
     font-size: 12pt;
+    min-width: 1425px;
 }
 body::-webkit-scrollbar {
     width: 8px;
@@ -61,10 +62,17 @@ td button {
 
 
 .menu {
-    margin: 10px;
-    margin-bottom: 0px;
     height: 70px;
     text-align: center;
+    /* make it fix on top */
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    padding: 10px;
+    padding-bottom: 0;
+    background-color: rgba(21, 23, 31, 0.58);
+    z-index: 1;
 }
 .menu-item {
     text-align: center;
@@ -232,12 +240,16 @@ td button {
 
 
 .content {
-    /*background-color: black;*/
-    margin: 20px;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    flex-grow: 1;
+    /*margin: 20px;
+    margin-top: 80px;
+    margin-bottom: 0px;*/
     position: relative;
+    top: 65px;
+
+
+    display: inline-block;
+    width: 100%;
+    //overflow: hidden;
 }
 
 
@@ -348,6 +360,12 @@ tr.skip {
 
 canvas {
     border: 1px solid rgb(50,50,50);
+    position: absolute;
+    display: flex;
+    top: 35px;
+    left: 0px;
+    width: 100%;
+    height: 800px;
 }
 
 
@@ -613,8 +631,8 @@ input:checked + .slider:before {
 
 .page {
     position: absolute;
-    left: 0;
-    top: 0;
+    margin: 10px;
+    //background-color: gray;
 }
 
 .transition-page-enter-active {
